fix(zodiaclist): Change text color of ZodiacSignList to white for better visibility in style.css

--- a/page/zodiacsignlists/assets/css/style.css
+++ b/page/zodiacsignlists/assets/css/style.css
@@ -38,7 +38,7 @@ header{
 }
 .navbar #ZodiacSignList{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 15px;
     padding: 8px 12px;
     margin-left: 40px;
